# sailboat

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  a  extra.py  index.md  pyproject.toml  sailboat.toml  setup.py  test  wixpy.json
.github/ISSUE_TEMPLATE/: blank.md  bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  sailboat.yml  shipsnake.yml
docs/: CNAME  _config.yml  available.md  availible.md  index.md  plugins.md
docs2/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs2/_build/html/_sources/: index.rst.txt
docs2/_build/html/_static/: documentation_options.js
sailboat/: LICENSE.txt  __init__.py  __main__.py  actions.py  auto.bash  autocomplete  autocomplete.py  build.py  builders.py  core.py  extra.py  git.py  mkdoc.py  other.py  plugins.json  plugins.py  prerelease.py  readme.template  release.py  sailboat.yml.template  settings.py.template  setup.py.template  task.py  tests.py  wixpy.template.json  wizard.py
sailboat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sailboat/core2/: __main__.py  release.py  wizard.py
sailboat/resources/: brew.rb  gitignore.template  info.plist.xml  readme.template.md  sailboat.yml.template  settings.py.template  setup.py.template  wixpy.template.json
sailboat/resources/licenses/: MIT
