[tool.poetry]
name = "wholeroundcomputation"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
twine = "^3.2.0"
dmgbuild = "^1.4.2"
pyinstaller = "^4.1"
wheel = "^0.36.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
